<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_main_title"
        style="@style/baseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_text_view_title" />

    <Button
        android:id="@+id/button_main_set_parking_spaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="@dimen/button_main_inset_vertical_size_xsmall"
        android:insetBottom="@dimen/button_main_inset_vertical_size_xsmall"
        android:text="@string/main_activity_button_set_parking" />

    <Button
        android:id="@+id/button_main_new_reservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="@dimen/button_main_inset_vertical_size_xsmall"
        android:insetBottom="@dimen/button_main_inset_vertical_size_xsmall"
        android:text="@string/main_activity_btn_new_reservation" />
</LinearLayout>

